...
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="41dp"
        android:text="Email"
        android:textSize="16sp"
...
        android:text="Email"
        android:textSize="16dp">

    </TextView>

    <Button
        android:id="@+id/deleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:onClick="deleteUser"
        android:text="Delete"></Button>

...
