<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/adminHomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin Home"
        android:layout_centerHorizontal="true"
        android:textSize="48dp"
        android:layout_margin="10dp">

    </TextView>

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="Create User">

    </Button>

    <ListView
        android:id="@+id/admin_user_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminHomeText">

    </ListView>

</RelativeLayout>